syntax = "proto3";

option go_package = "Nishtagram-AuthService/sec/grpc/server/authentication_server";


service Authentication {
  rpc Login(LoginCredentials) returns (LoginResponse);
  rpc Logout(Tokens) returns (BooleanResponse);
  rpc ValidateToken(Tokens) returns (TokenValidationResponse);
  rpc ResendEmail(ResendEmailRequest) returns (BooleanResponse);
  rpc GenerateSecret(AccessToken) returns (ScanTotp);
  rpc ValidateTemporaryToken(AccessToken) returns (AccessToken);
  rpc ValidateTotp(TotpValidation) returns (LoginResponse);
}

service Totp {
  rpc Verify(TotpSecret) returns (BoolWrapper);
  rpc IsEnabled(Username) returns (BoolWrapper);
  rpc Disable(TotpSecret) returns (BoolWrapper);
}

message LoginCredentials {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  string id = 1;
  string username = 2;
  string role = 3;
  string accessToken = 4;
  string refreshToken = 5;
}

message Tokens {
  string Token = 1;
  string RefreshToken = 2;
}

message BooleanResponse {
  bool success = 1;
}

message AccessToken {
  string accessToken = 1;
}

message TokenValidationResponse {
  string accessToken = 1;
  string accessTokenUuid = 2;
  string refreshTokenUuid = 3;
}

message ResendEmailRequest {
  string email = 1;
}

message AuthorizationString {
  string authorization = 1;
}

message ScanTotp {
  string qrCode = 1;
  string secret = 2;
}

message TotpSecret {
  string passcode = 1;
  string userId = 2;
}

message StringWrapper {
  string content = 1;
}

message BoolWrapper {
  bool value = 1;
}

message Username {
  string username = 1;
}

message TotpValidation {
  string passcode = 1;
  AccessToken accessToken = 2;
}
